--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "adm-zip": "^0.5.16",
+    "body-parser": "^2.2.0",
     "express": "^4.21.2",
     "image-size": "^1.1.1",
     "multer": "^1.4.5-lts.1"
