--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^2.2.0",
     "express": "^4.21.2",
     "image-size": "^1.1.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
