--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "unzipper": "^0.12.3"
   },
   "devDependencies": {
+    "@types/adm-zip": "~0.5.7",
+    "@types/body-parser": "~1.19.5",
+    "@types/express": "~5.0.1",
+    "@types/multer": "~1.4.12",
+    "@types/node": "^22.14.0",
+    "@types/unzipper": "~0.10.11",
     "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
     "webpack-cli": "^6.0.1"
   }
 }
