typeScriptに書き換え、大規模なファイル構造変更

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "strict": true,
     "esModuleInterop": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "baseUrl": "./src",
+    "paths": {
+      "@mytypes/*": ["types/*"]
+    }
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
