--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/unzipper": "~0.10.11",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
     "webpack-cli": "^6.0.1"
   }
