--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,10 +4,14 @@
     "module": "CommonJS",
     "strict": true,
     "esModuleInterop": true,
-    "baseUrl": "./",
-    "paths": {
-      "@mytypes/*": ["shared/types/*"],
-      "@srvtypes/*":["server/types/*"]
-    }
-  }
+    "resolveJsonModule": true,
+    "outDir": "./dist",
+    "rootDir": "./src"
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
