--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "pdf-lib": "^1.17.1",
     "pdf-to-png-converter": "^3.6.5",
     "sharp": "^0.33.5",
-    "unzipper": "^0.12.3"
+    "unzipper": "^0.12.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/adm-zip": "~0.5.7",
