--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "CommonJS",
     "outDir": "dist-electron",
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "baseUrl": ".",
-    "types": ["node"]
+    "types": ["node", "electron"],
   },
-  "include": ["**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": [
+    "node_modules"
+  ]
 }
