--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "build:server": "tsc --project server/tsconfig.json",
-    "build:client": "vite build",
+    "build:client": "cd client && vite build",
+    "build": "concurrently \"npm:build:*\"",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run dev",
     "dev:electron": "cd electron && npm run dev",
