--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "comic-viewer-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node server.js",
-    "dev": "nodemon --watch src --exec ts-node server.ts"
+    "start": "node src/server.js",
+    "dev": "nodemon --watch src --exec ts-node src/server.ts"
   },
   "author": "",
   "license": "ISC",
