--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   "devDependencies": {
     "@types/electron": "^1.4.38",
     "concurrently": "^9.1.2",
-    "electron": "^35.1.4"
+    "electron": "^35.1.4",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "build:server": "tsc --project server/tsconfig.json",
     "build:client": "cd client && vite build",
     "build": "concurrently \"npm:build:*\"",
-    
-    "dev:server": "cd server && npm run dev",
-    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run build",
+    "dev:client": "cd client && npm run build",
     "dev:electron": "cd electron && npm run dev",
-    "dev": "concurrently \"npm:dev:*\""
+    "dev": "npm-run-all dev:server dev:client dev:electron"
   }
 }
