--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "devDependencies": {
     "@types/electron": "^1.4.38",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "electron": "^35.1.4",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "build:server": "tsc --project server/tsconfig.json",
     "build:client": "cd client && vite build",
+    "build:electron": "cd electron && cross-env NODE_ENV=development npm run build",
     "build": "concurrently \"npm:build:*\"",
-    "dev:server": "cd server && npm run build",
-    "dev:client": "cd client && npm run build",
-    "dev:electron": "cd electron && npm run dev",
-    "dev": "npm-run-all dev:server dev:client dev:electron"
+    "dev:server": "cd server && cross-env NODE_ENV=development npm run dev",
+    "dev:client": "cd client && cross-env NODE_ENV=development npm run dev",
+    "dev:electron": "cd electron && cross-env NODE_ENV=development npm run dev",
+    "dev": "concurrently \"npm:dev:*\""
   }
 }
