共通設定保存用ファイルを作成

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "workspaces": [
     "client",
     "server",
-    "electron"
+    "electron",
+    "shared"
   ],
   "devDependencies": {
     "@types/electron": "^1.4.38",
