--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,13 @@
   "name": "comic-viewer-server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node src/server.js",
-    "dev": "nodemon --watch src --exec ts-node src/server.ts"
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch src --exec ts-node src/server.ts",
+    "clean": "rimraf dist"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +32,7 @@
     "@types/node": "^22.14.0",
     "@types/unzipper": "~0.10.11",
     "nodemon": "^3.1.7",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
