--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,5 +1,5 @@
 {
-  "dataDirectory": "K:\\Document\\Comic\\Data",
+  "dataDirectory": ["K:\\Document\\Comic\\Data"],
   "viewer": {
     "pageDirection": "left",
     "keyboardShortcuts": {
