--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comic-viewer-client",
+  "name": "@comic-viewer/client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
