sharedのパッケージ名を@comic-viewer/sharedに変更

--- a/shared/package.json
+++ b/shared/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@types/shared",
+  "name": "@comic-viewer/shared",
   "version": "1.0.0",
-  "main": "src/index.js",
-  "types":"src/index.ts",
+  "main": "dist/index.js",
+  "types": "dts/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
