--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "rimraf client/dist server/dist",
     "build:server": "tsc --project server/tsconfig.json",
     "build:client": "cd client && vite build",
+    "build:shared" : "tsc --project shared/tsconfig.json",
     "build": "npm run clean && concurrently \"npm:build:*\"",
     "dev:server": "cd server && cross-env NODE_ENV=development npm run dev",
     "dev:client": "cd client && cross-env NODE_ENV=development npm run dev",
