--- a/shared/package.json
+++ b/shared/package.json
@@ -2,7 +2,7 @@
   "name": "@comic-viewer/shared",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "types": "dts/index.d.ts",
+  "types": "dist/dts/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
