--- a/shared/package.json
+++ b/shared/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "build": "tsc"
   },
+  "dependencies": {
+    "zod": "^3.24.2"
+  },
   "devDependencies": {
     "typescript": "^5.0.0"
   }
