--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "declaration": true,
+    "module": "CommonJS",
     "outDir": "dist",
     "rootDir": "src",
     "moduleResolution": "Node",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
+    "declaration": true,
     "declarationMap": true,
-    "allowJs": false,
     "declarationDir": "./dist/dts"
   },
   "include": ["./src"],
