--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,13 @@
   "name": "@comic-viewer/server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch src --exec ts-node src/server.ts",
+    "dev": "nodemon --watch src --exec tsx src/server.ts",
     "clean": "rimraf dist"
   },
   "author": "",
@@ -36,6 +37,7 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.8.2",
     "webpack-cli": "^6.0.1"
   }
