--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
+    "target": "esnext",
+    "module": "node16",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -9,12 +9,15 @@
     "rootDir": "./src",
     "types": ["express", "multer"],
     "skipLibCheck": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node16"
   },
   "include": ["src/**/*.ts" , "src/server.ts"],
   "exclude": [
     "node_modules",
     "../electron",
     "../node_modules/@types/electron"
-  ]
+  ],
+  "ts-node": {
+    "esm": true
+  }
 }
