--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.18",
+    "astro": "^5.16.6",
     "typescript": "~5.7.2",
     "vite": "^6.2.5"
   },
