--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "build": "astro build"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
