zodのモジュールをルートのnode_modulesを参照するように設定を変更

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,7 +8,10 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "lib": ["dom", "esnext"],
-    "allowJs": true
+    "baseUrl": ".",
+    "paths": {
+      "@comic-viewer/shared":["../shared/src/index.ts"]
+    }
   },
   "include": [
     "src/**/*"
