--- a/shared/package.json
+++ b/shared/package.json
@@ -4,6 +4,12 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/dts/index.d.ts",
+  "exports":{
+    ".":{
+      "types":"./src/index.ts",
+      "default":"./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc"
   },
