--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-to-png-converter": "^3.6.5",
     "sharp": "^0.33.5",
-    "unzipper": "^0.12.3",
-    "zod": "^3.24.2"
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@types/adm-zip": "~0.5.7",
@@ -38,7 +37,6 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.8.2",
     "webpack-cli": "^6.0.1"
   }
 }
